chore: resolve the accumulated SonarQube findings
Sweep open issues down to the deliberately kept ones.

Deliberate patterns the analyzer cannot judge keep their behavior
and get a targeted suppression with a one-line rationale.

on-behalf-of: @multiversio <info@multivers.io>